--- a/tests/Gemfile
+++ b/tests/Gemfile
@@ -1,1 +1,3 @@
+source 'https://rubygems.org'
+
 gem 'uws', git: 'https://github.com/cirospaciari/uWebSockets.rb.git', branch: 'main', submodules: true
