--- a/tests/Gemfile
+++ b/tests/Gemfile
@@ -1,3 +1,3 @@
 source 'https://rubygems.org'
 
-gem 'uws', github: 'cirospaciari/uWebSockets.rb', branch: 'main', submodules: true
+gem 'socketify', git: 'https://github.com/cirospaciari/socketify.rb.git', branch: 'main', submodules: true
